# ev-sports-tracker

./: .gitignore  README.md  ev  loop  project_context.md
backend/: pyproject.toml  pytest.ini  requirements.txt
backend/archive/dabble/: README.md  __init__.py  dabble_parser.py
backend/config/: .env.example  __init__.py  api_headers.py  dk_discovery.py  dk_subcategories.py  espn_competitions.py  espn_markets.py  espn_queries.py  fd_competitions.py  fd_markets.py  market_maps.py  pipeline_sources.py  settings.py  sharp_books.py  team_abbrev.py
backend/config/discovery/: mlb.yaml
backend/core/: engine.py  ev_display.py  ev_pipeline.py  ev_run_diff.py  flat_line.py  ladder_index.py  line_adjustment.py  models.py  multi_book_resolver.py  pipeline_artifacts.py  pipeline_runner.py  pipeline_scrape.py  pipeline_timing.py  resolution_math.py  scrape_result.py
backend/parsers/: __init__.py  betr_parser.py  dk_parser.py  espn_parser.py  fd_parser.py  normalize.py
backend/scrapers/: base_scraper.py
backend/scrapers/dfs/: dabble_engine.py
backend/scrapers/sportsbooks/: dk_api.py  dk_engine.py  dk_subcategory_discovery.py  espn_api.py  espn_auth.py  espn_engine.py  fd_api.py  fd_engine.py
backend/scripts/: probe_dk_discover.py  probe_dk_subcategories.py  probe_espn_events.py  probe_espn_milestone_drawers.py  probe_fd_events.py
backend/tests/: conftest.py
backend/tests/fixtures/: betr_mlb_live.json  betr_mlb_pregame.json  betr_wnba_pregame.json  dk_league_mlb_events.json  dk_league_mlb_events_with_live.json  (+33 more)
backend/utils/: formatting.py  math_utils.py
(+86 files in other folders)
